--- a/api/qsharp/microsoft.quantum.canon.controlledonbitstring.yml
+++ b/api/qsharp/microsoft.quantum.canon.controlledonbitstring.yml
@@ -46,9 +46,10 @@ output:
     functors:
     - Adjoint
     - Controlled
-ms.openlocfilehash: 1abe0f1abcbab06aa9821c52878cf85b03d2c592
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73227383"
+metadata:
+  ms.openlocfilehash: 1abe0f1abcbab06aa9821c52878cf85b03d2c592
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73227383"
