--- a/api/qsharp/microsoft.quantum.canon.curryop.yml
+++ b/api/qsharp/microsoft.quantum.canon.curryop.yml
@@ -45,9 +45,10 @@ output:
           types:
           - isPrimitive: true
             uid: Unit
-ms.openlocfilehash: 3f409fb9354c8b1559965ad01a94a0e286fd1155
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73227366"
+metadata:
+  ms.openlocfilehash: 3f409fb9354c8b1559965ad01a94a0e286fd1155
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73227366"
