--- a/api/qsharp/microsoft.quantum.canon.uncurryopa.yml
+++ b/api/qsharp/microsoft.quantum.canon.uncurryopa.yml
@@ -49,9 +49,10 @@ output:
         uid: Unit
     functors:
     - Adjoint
-ms.openlocfilehash: 7237f2c0465bf41c4e66a571eb28e4d1987251a8
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73216775"
+metadata:
+  ms.openlocfilehash: 7237f2c0465bf41c4e66a571eb28e4d1987251a8
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73216775"
