--- a/api/qsharp/microsoft.quantum.convert.resultarrayasint.yml
+++ b/api/qsharp/microsoft.quantum.convert.resultarrayasint.yml
@@ -18,9 +18,10 @@ output:
   types:
   - isPrimitive: true
     uid: Int
-ms.openlocfilehash: 341f7c9dd8e7010c9ad8abd71f0f8f3abcf53e14
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73230715"
+metadata:
+  ms.openlocfilehash: 341f7c9dd8e7010c9ad8abd71f0f8f3abcf53e14
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73230715"
