--- a/api/qsharp/microsoft.quantum.diagnostics.equalityfactcp.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.equalityfactcp.yml
@@ -23,9 +23,10 @@ output:
   types:
   - isPrimitive: true
     uid: Unit
-ms.openlocfilehash: ed9201ef56ceb64db69f785af49b4a5fc71b91da
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73226941"
+metadata:
+  ms.openlocfilehash: ed9201ef56ceb64db69f785af49b4a5fc71b91da
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73226941"
