--- a/api/qsharp/microsoft.quantum.errorcorrection.bitfliprecoveryfn.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.bitfliprecoveryfn.yml
@@ -15,9 +15,10 @@ output:
     uid: microsoft.quantum.errorcorrection.recoveryfn
 seeAlso:
 - microsoft.quantum.canon.recoveryfn
-ms.openlocfilehash: 6b9446f55e47cc96fe0af194b956c51282ae0f1b
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73233588"
+metadata:
+  ms.openlocfilehash: 6b9446f55e47cc96fe0af194b956c51282ae0f1b
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73233588"
