--- a/api/qsharp/microsoft.quantum.errorcorrection.steanecoderecoveryz.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.steanecoderecoveryz.yml
@@ -19,9 +19,10 @@ output:
 seeAlso:
 - steanecoderecoveryx
 - steanecoderecoveryfns
-ms.openlocfilehash: 7a3bde6b435b03ab706236299683269f3811373e
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73230290"
+metadata:
+  ms.openlocfilehash: 7a3bde6b435b03ab706236299683269f3811373e
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73230290"
