--- a/api/qsharp/microsoft.quantum.extensions.convert.todouble.yml
+++ b/api/qsharp/microsoft.quantum.extensions.convert.todouble.yml
@@ -22,9 +22,10 @@ output:
   types:
   - isPrimitive: true
     uid: Double
-ms.openlocfilehash: eeed57192ec57bd5354b21ad8592f265d0cb2513
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73234217"
+metadata:
+  ms.openlocfilehash: eeed57192ec57bd5354b21ad8592f265d0cb2513
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73234217"
