--- a/api/qsharp/microsoft.quantum.intrinsic.expfrac.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.expfrac.yml
@@ -38,9 +38,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: d02f48d695db3dd2d7012df5bbf22718ffe41b74
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73223762"
+metadata:
+  ms.openlocfilehash: d02f48d695db3dd2d7012df5bbf22718ffe41b74
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73223762"
