--- a/api/qsharp/microsoft.quantum.intrinsic.measure.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.measure.yml
@@ -31,9 +31,10 @@ output:
   - summary: 如果观察到 $ + $1 eigenvalue，则 `Zero` `One` 是否观察到 $-$1 eigenvalue。
     isPrimitive: true
     uid: Result
-ms.openlocfilehash: 65390f851d82eb579d89072dc770f3ce077ce515
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73234098"
+metadata:
+  ms.openlocfilehash: 65390f851d82eb579d89072dc770f3ce077ce515
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73234098"
