--- a/api/qsharp/microsoft.quantum.intrinsic.r1frac.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.r1frac.yml
@@ -50,9 +50,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: c91aa9424abd038fa3a5a22fd23ac92cce171414
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73233979"
+metadata:
+  ms.openlocfilehash: c91aa9424abd038fa3a5a22fd23ac92cce171414
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73233979"
