--- a/api/qsharp/microsoft.quantum.logical.equalcp.yml
+++ b/api/qsharp/microsoft.quantum.logical.equalcp.yml
@@ -20,9 +20,10 @@ output:
   - summary: 当且仅当 `a` 等于 `b`时，`true`。
     isPrimitive: true
     uid: Bool
-ms.openlocfilehash: 1c47e5b8db2a720935dd6def1079a7d4ae321484
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73233180"
+metadata:
+  ms.openlocfilehash: 1c47e5b8db2a720935dd6def1079a7d4ae321484
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73233180"
