--- a/api/qsharp/microsoft.quantum.math.modi.yml
+++ b/api/qsharp/microsoft.quantum.math.modi.yml
@@ -22,9 +22,10 @@ output:
   - summary: 取模 $a \bmod b $。
     isPrimitive: true
     uid: Int
-ms.openlocfilehash: 546d65a3bd08d7a33ebf8157ba7b65041fd1bc64
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73233724"
+metadata:
+  ms.openlocfilehash: 546d65a3bd08d7a33ebf8157ba7b65041fd1bc64
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73233724"
