--- a/api/qsharp/microsoft.quantum.oracles.oracletodiscrete.yml
+++ b/api/qsharp/microsoft.quantum.oracles.oracletodiscrete.yml
@@ -29,9 +29,10 @@ output:
   types:
   - summary: 部分应用于 "黑盒" oracle 的操作，该
     uid: microsoft.quantum.oracles.discreteoracle
-ms.openlocfilehash: e82c2f3a9d606b1e5316c45aaceeff702d067258
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73230885"
+metadata:
+  ms.openlocfilehash: e82c2f3a9d606b1e5316c45aaceeff702d067258
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73230885"
