--- a/api/qsharp/microsoft.quantum.oracles.reflectionoracle.yml
+++ b/api/qsharp/microsoft.quantum.oracles.reflectionoracle.yml
@@ -15,9 +15,10 @@ summary: >-
   - 要对其执行给定反射的 qubit 注册。
 remarks: 此 oracle $O = \boldone-（1-e ^ {i \phi}） \ket{\psi}\bra{\psi} $ 通过一个单纯状态 $ \ket{\psi} $ 的阶段 $ \phi $ 执行部分反射。
 syntax: newtype ReflectionOracle = ((Double, Qubit[]) => Unit is Adj + Ctl);
-ms.openlocfilehash: 7ca6551a83ae279c5a937556d7c2c9dde98e4522
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73230851"
+metadata:
+  ms.openlocfilehash: 7ca6551a83ae279c5a937556d7c2c9dde98e4522
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73230851"
