--- a/api/qsharp/microsoft.quantum.canon.applypauli.yml
+++ b/api/qsharp/microsoft.quantum.canon.applypauli.yml
@@ -49,9 +49,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: d44160aebb18ea6308b955f359ff719c6269c264
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73213494"
+metadata:
+  ms.openlocfilehash: d44160aebb18ea6308b955f359ff719c6269c264
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73213494"
