--- a/api/qsharp/microsoft.quantum.canon.applyreversedoplittleendiana.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyreversedoplittleendiana.yml
@@ -34,9 +34,10 @@ output:
     uid: Unit
 functors:
 - Adjoint
-ms.openlocfilehash: bb4bc51c662bcaf172663ac1c58b9341d52ec187
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73213511"
+metadata:
+  ms.openlocfilehash: bb4bc51c662bcaf172663ac1c58b9341d52ec187
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73213511"
