--- a/api/qsharp/microsoft.quantum.canon.applytofirstqubita.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytofirstqubita.yml
@@ -38,9 +38,10 @@ functors:
 - Adjoint
 seeAlso:
 - microsoft.quantum.canon.applytofirstqubit
-ms.openlocfilehash: 21246e0f9c9d27609107ad27c341851a15af5ede
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73213477"
+metadata:
+  ms.openlocfilehash: 21246e0f9c9d27609107ad27c341851a15af5ede
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73213477"
