--- a/api/qsharp/microsoft.quantum.canon.curriedop.yml
+++ b/api/qsharp/microsoft.quantum.canon.curriedop.yml
@@ -26,9 +26,9 @@ remarks: >-
   ```
 syntax: "function CurriedOp (op : (('T, 'U) => Unit)) : ('T -> ('U => Unit))"
 input:
-  content: （op：（（=，' U） = > 单位））
+  content: "(op : (('T, 'U) => Unit))"
   types:
-  - name: 基金
+  - name: op
     summary: 其输入为成对的操作。
     isOperation: true
     input:
@@ -42,7 +42,7 @@ input:
       - isPrimitive: true
         uid: Unit
 output:
-  content: （不 > （' U = > 单位））
+  content: ('T -> ('U => Unit))
   types:
   - summary: 一种操作，它接受对的第一个元素，并返回一个接受作为其输入的操作，该操作将原始操作的输入的第二个元素作为输入。
     isFunction: true
@@ -66,9 +66,10 @@ typeParameters:
   summary: 成对定义的函数的第一个分量的类型。
 - uid: "'U"
   summary: 成对定义的函数的第二个分量的类型。
-ms.openlocfilehash: 788648d24ba536926504caba92e768ecb34e001a
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/30/2019
-ms.locfileid: "73067894"
+metadata:
+  ms.openlocfilehash: 788648d24ba536926504caba92e768ecb34e001a
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73067894"
