--- a/api/qsharp/microsoft.quantum.canon.intarrayfromrange.yml
+++ b/api/qsharp/microsoft.quantum.canon.intarrayfromrange.yml
@@ -23,9 +23,10 @@ output:
   - isArray: true
     isPrimitive: true
     uid: Int
-ms.openlocfilehash: 464ae346b2b504ca1327beb28aefe6c33b91766b
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73227264"
+metadata:
+  ms.openlocfilehash: 464ae346b2b504ca1327beb28aefe6c33b91766b
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73227264"
