--- a/api/qsharp/microsoft.quantum.canon.restricttosubregisterca.yml
+++ b/api/qsharp/microsoft.quantum.canon.restricttosubregisterca.yml
@@ -45,9 +45,10 @@ output:
       types:
       - isPrimitive: true
         uid: Unit
-ms.openlocfilehash: 4ff2f39c3ecc85b19a78f8c2d8d649f7447dc982
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73230783"
+metadata:
+  ms.openlocfilehash: 4ff2f39c3ecc85b19a78f8c2d8d649f7447dc982
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73230783"
