--- a/api/qsharp/microsoft.quantum.characterization.estimatefrequency.yml
+++ b/api/qsharp/microsoft.quantum.characterization.estimatefrequency.yml
@@ -50,9 +50,10 @@ output:
       这对于遵守物理限制的目标计算机尤其重要，因此无法衡量概率。
     isPrimitive: true
     uid: Double
-ms.openlocfilehash: 1c27d38983f9fa9c1a1dc5c80548e307b7c36ffe
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73229185"
+metadata:
+  ms.openlocfilehash: 1c27d38983f9fa9c1a1dc5c80548e307b7c36ffe
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73229185"
