--- a/api/qsharp/microsoft.quantum.chemistry.jordanwigner.qubitizationoracle.yml
+++ b/api/qsharp/microsoft.quantum.chemistry.jordanwigner.qubitizationoracle.yml
@@ -34,9 +34,10 @@ output:
         functors:
         - Adjoint
         - Controlled
-ms.openlocfilehash: 4890f95631a5d99720fc5da307707ad040f0b391
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73233503"
+metadata:
+  ms.openlocfilehash: 4890f95631a5d99720fc5da307707ad040f0b391
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73233503"
