--- a/api/qsharp/microsoft.quantum.convert.maybebigintasint.yml
+++ b/api/qsharp/microsoft.quantum.convert.maybebigintasint.yml
@@ -23,9 +23,10 @@ output:
       uid: Int
     - isPrimitive: true
       uid: Bool
-ms.openlocfilehash: cd679df4a0cf178bf53bbf566bdfa0395ad8b019
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73230766"
+metadata:
+  ms.openlocfilehash: cd679df4a0cf178bf53bbf566bdfa0395ad8b019
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73230766"
