--- a/api/qsharp/microsoft.quantum.convert.resultarrayasboolarray.yml
+++ b/api/qsharp/microsoft.quantum.convert.resultarrayasboolarray.yml
@@ -20,9 +20,10 @@ output:
     isArray: true
     isPrimitive: true
     uid: Bool
-ms.openlocfilehash: d2ccd4c2b8f1b3e67050f7ebb0756def5bea3b07
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73230732"
+metadata:
+  ms.openlocfilehash: d2ccd4c2b8f1b3e67050f7ebb0756def5bea3b07
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73230732"
