--- a/api/qsharp/microsoft.quantum.errorcorrection.bitflipcode.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.bitflipcode.yml
@@ -13,9 +13,10 @@ output:
   types:
   - summary: 通过指定 `QECC` 类型，返回量程错误更正代码的实现。
     uid: microsoft.quantum.errorcorrection.qecc
-ms.openlocfilehash: bd9fdd54cf79610fa83ed99f4c94c89b7218c2c6
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73230409"
+metadata:
+  ms.openlocfilehash: bd9fdd54cf79610fa83ed99f4c94c89b7218c2c6
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73230409"
