--- a/api/qsharp/microsoft.quantum.errorcorrection.fivequbitcodeencoder.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.fivequbitcodeencoder.yml
@@ -26,9 +26,10 @@ output:
   content: Microsoft.Quantum.ErrorCorrection.LogicalRegister
   types:
   - uid: microsoft.quantum.errorcorrection.logicalregister
-ms.openlocfilehash: dab7f35d18c2c0b2db4c7f473f0ad40ac0caf940
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73230426"
+metadata:
+  ms.openlocfilehash: dab7f35d18c2c0b2db4c7f473f0ad40ac0caf940
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73230426"
