--- a/api/qsharp/microsoft.quantum.extensions.testing.assertoperationsequalinplacecompbasis.yml
+++ b/api/qsharp/microsoft.quantum.extensions.testing.assertoperationsequalinplacecompbasis.yml
@@ -48,9 +48,10 @@ output:
   types:
   - isPrimitive: true
     uid: Unit
-ms.openlocfilehash: ef71e4464f7d79cbe50da5b93201d1e41e4d9e6a
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73216673"
+metadata:
+  ms.openlocfilehash: ef71e4464f7d79cbe50da5b93201d1e41e4d9e6a
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73216673"
