--- a/api/qsharp/microsoft.quantum.intrinsic.i.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.i.yml
@@ -20,9 +20,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: fd4e9566c6ed1998681385d46643b4f001c6fb6e
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73234166"
+metadata:
+  ms.openlocfilehash: fd4e9566c6ed1998681385d46643b4f001c6fb6e
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73234166"
