--- a/api/qsharp/microsoft.quantum.math.dividedbyc.yml
+++ b/api/qsharp/microsoft.quantum.math.dividedbyc.yml
@@ -19,9 +19,10 @@ output:
   types:
   - summary: 商 $a/b $。
     uid: microsoft.quantum.math.complex
-ms.openlocfilehash: f07acd54fac1189c5691c0492d37136fa61ec9e0
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73229780"
+metadata:
+  ms.openlocfilehash: f07acd54fac1189c5691c0492d37136fa61ec9e0
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73229780"
