--- a/api/qsharp/microsoft.quantum.math.minuscp.yml
+++ b/api/qsharp/microsoft.quantum.math.minuscp.yml
@@ -19,9 +19,10 @@ output:
   types:
   - summary: 差异 $a-b $。
     uid: microsoft.quantum.math.complexpolar
-ms.openlocfilehash: 57e0a74e5fc68e94dd53fd44523756338c8abbbe
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73233877"
+metadata:
+  ms.openlocfilehash: 57e0a74e5fc68e94dd53fd44523756338c8abbbe
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73233877"
