--- a/api/qsharp/microsoft.quantum.math.minusd.yml
+++ b/api/qsharp/microsoft.quantum.math.minusd.yml
@@ -22,9 +22,10 @@ output:
   - summary: 差异 $a-b $。
     isPrimitive: true
     uid: Double
-ms.openlocfilehash: c4c74c1a9eebee07e1633e9e1d0df58de7a0a296
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73233843"
+metadata:
+  ms.openlocfilehash: c4c74c1a9eebee07e1633e9e1d0df58de7a0a296
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73233843"
