--- a/api/qsharp/microsoft.quantum.math.minusi.yml
+++ b/api/qsharp/microsoft.quantum.math.minusi.yml
@@ -22,9 +22,10 @@ output:
   - summary: 差异 $a-b $。
     isPrimitive: true
     uid: Int
-ms.openlocfilehash: 005729ab867dd0affaa32be92f1cb7a0ca4a1a5f
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73233792"
+metadata:
+  ms.openlocfilehash: 005729ab867dd0affaa32be92f1cb7a0ca4a1a5f
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73233792"
