--- a/api/qsharp/microsoft.quantum.primitive.ry.yml
+++ b/api/qsharp/microsoft.quantum.primitive.ry.yml
@@ -28,9 +28,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: 4090f71110bdc22b273030516b52a9c56c1da848
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73227417"
+metadata:
+  ms.openlocfilehash: 4090f71110bdc22b273030516b52a9c56c1da848
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73227417"
