commit translated contents

--- a/api/qsharp/microsoft.quantum.preparation.preparechoistatec.yml
+++ b/api/qsharp/microsoft.quantum.preparation.preparechoistatec.yml
@@ -6,9 +6,9 @@ namespace: Microsoft.Quantum.Preparation
 summary: 针对给定的引用和目标寄存器，为具有受控变体的给定操作准备 Choi – Jamiłkowski 状态。
 syntax: 'operation PrepareChoiStateC (op : (Qubit[] => Unit is Ctl), reference : Qubit[], target : Qubit[]) : Unit'
 input:
-  content: （op：（Qubit [] = > Unit 为 Ctl），引用： Qubit []，target： Qubit []）
+  content: '(op : (Qubit[] => Unit is Ctl), reference : Qubit[], target : Qubit[])'
   types:
-  - name: 基金
+  - name: op
     isOperation: true
     input:
       types:
@@ -25,12 +25,12 @@ input:
     isArray: true
     isPrimitive: true
     uid: Qubit
-  - name: 目标
+  - name: target
     isArray: true
     isPrimitive: true
     uid: Qubit
 output:
-  content: 计价单位
+  content: Unit
   types:
   - isPrimitive: true
     uid: Unit
@@ -38,9 +38,10 @@ functors:
 - Controlled
 seeAlso:
 - preparechoistate
-ms.openlocfilehash: 79579ec18d7b5a6ff0443f26271106af37af1c65
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/30/2019
-ms.locfileid: "73067180"
+metadata:
+  ms.openlocfilehash: 79579ec18d7b5a6ff0443f26271106af37af1c65
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73067180"
