--- a/api/qsharp/microsoft.quantum.simulation.blockencodingreflectionbylcu.yml
+++ b/api/qsharp/microsoft.quantum.simulation.blockencodingreflectionbylcu.yml
@@ -54,9 +54,10 @@ output:
 seeAlso:
 - microsoft.quantum.canon.blockencoding
 - microsoft.quantum.canon.blockencodingreflection
-ms.openlocfilehash: a092068a61d860074ace150b0c7872eb064a63b9
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73219155"
+metadata:
+  ms.openlocfilehash: a092068a61d860074ace150b0c7872eb064a63b9
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73219155"
