--- a/api/qsharp/microsoft.quantum.intrinsic.cnot.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.cnot.yml
@@ -40,9 +40,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: b0173ad04caa8f3c5830f856d5dc805c896eecff
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73219274"
+metadata:
+  ms.openlocfilehash: b0173ad04caa8f3c5830f856d5dc805c896eecff
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73219274"
