--- a/api/qsharp/microsoft.quantum.logical.greaterthanorequali.yml
+++ b/api/qsharp/microsoft.quantum.logical.greaterthanorequali.yml
@@ -33,9 +33,10 @@ output:
   - summary: 当且仅当 `a` 大于或等于 `b`时，`true`。
     isPrimitive: true
     uid: Bool
-ms.openlocfilehash: d98611131760ce02eb9f5a6cffe3b6ca5617b7f2
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73225581"
+metadata:
+  ms.openlocfilehash: d98611131760ce02eb9f5a6cffe3b6ca5617b7f2
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73225581"
