--- a/api/qsharp/microsoft.quantum.canon.cx.yml
+++ b/api/qsharp/microsoft.quantum.canon.cx.yml
@@ -7,7 +7,7 @@ summary: >-
   将受控的 X （CX）入口应用于一对 qubits。
 
 
-  $ $ \begin{align} 1 & 0 & 0 & 0 \\\\ 0 & 1 & 0 & 0 \\\\ 0 & 0 & 0 & 1 \\\\ 0 & 0 & 1 & 0 \end{align}，$ $ 其中的行和列组织为 "量程概念" 指南。
+  $ $ \begin{align} 1 & 0 & 0 & 0 \\\\ 0 & 1 & 0 & \\\\ & 0 & 0 & 1 \\0 \end{align}，$ $，其中的行和列组织为 "量程概念" 指南。\\
 remarks: >-
   等效于：
 
