--- a/api/qsharp/microsoft.quantum.intrinsic.exp.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.exp.yml
@@ -7,7 +7,7 @@ summary: >-
   应用多 qubit Pauli 运算符的幂。
 
 
-  \begin{align} e ^ {i \theta [P_0 \otimes P_1 \cdots P_ {N-1}]}，\end{align}，其中 $P _i $ 是 `paulis`的 $i $ th 元素，其中 $N = $`Length(paulis)`。
+  \begin{align} e ^ {i \theta [P_0 \otimes P_1 \cdots P_ {N-1}]}，\end{align}，其中 $P _i $ 是 $i 的 $ th 元素，其中 `paulis`= $ $N。`Length(paulis)`
 syntax: 'operation Exp (paulis : Pauli[], theta : Double, qubits : Qubit[]) : Unit'
 input:
   content: '(paulis : Pauli[], theta : Double, qubits : Qubit[])'
