--- a/api/qsharp/microsoft.quantum.canon.applytosubregister.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytosubregister.yml
@@ -5,7 +5,7 @@ type: operation
 namespace: Microsoft.Quantum.Canon
 summary: 将操作应用于寄存器的 subregister，其 qubits 由其索引数组指定。
 examples: >-
-  Create 三个 qubit state $ \frac{1}{\sqrt{2}} \ket{0}\_2 （\ket{0}\_1 \ 票证{0}_3 + \ket{1}\_1 \ 票证{1}_3） $:
+  Create 三个 qubit state $ \frac{1}{\sqrt{2}} \ket{0}\_2 （\ket{0}\_1 \ 票证{0}_3 + \ket{1}\_1 \ 票证{1}_3） $：
 
 
   ```qsharp
