--- a/api/qsharp/microsoft.quantum.canon.cy.yml
+++ b/api/qsharp/microsoft.quantum.canon.cy.yml
@@ -7,7 +7,7 @@ summary: >-
   将受控 Y （CY）入口应用于一对 qubits。
 
 
-  $ $ \begin{align} 1 & 0 & 0 & 0 \\\\ 0 & 1 & 0 & 0 \\\\ 0 & 0 & 0 &-i \\\\ 0 & 0 & & 0 \end{align}，$ $ 其中的行和列组织为 "量程概念" 指南。
+  $ $ \begin{align} 1 & 0 & 0 & 0 \\\\ 0 & 1 & 0 & 0 \\\\ 0 & 0 & & \\\\ & & 0 & 0 0 \end{align}，$ $，其中的行和列按 "量程概念" 指南进行组织。
 remarks: >-
   等效于：
 
