--- a/api/qsharp/microsoft.quantum.canon.multiplexz.yml
+++ b/api/qsharp/microsoft.quantum.canon.multiplexz.yml
@@ -7,18 +7,18 @@ summary: >-
   对 qubits 数组应用 Pauli Z 旋转。
 
 
-  这会将逐控制的单一操作应用 $U $，该操作会按角度 $ \theta_j $ （qubit Pauli $Z 运算符）执行旋转，$n $-qubit number state $ \ket{j} $ 控制。
+  这将应用按角度 $ \ theta_j $ $U $ 的乘法控制的单一操作，该操作在由 $n $-qubit number state $ \ket{j} $ 控制时，对 Pauli $Z 运算符执行旋转。
 
 
-  $U = \sum ^ {2 ^ n-1} _ {j = 0} \ket{j}\bra{j}\otimes e ^ {i Z \theta_j} $。
-remarks: 如果指定了小于 $ 2 ^ n $ 的元素 $ \theta_j = $0.0，则将填充 `coefficients`。
+  $U = \sum ^ {2 ^ n-1} _ {j = 0} \ket{j}\bra{j}\otimes e ^ {i Z \ theta_j} $。
+remarks: 如果指定了小于 $ 2 ^ n $ 的元素，则将用 $ \ theta_j = $0.0 填充 `coefficients`。
 syntax: 'operation MultiplexZ (coefficients : Double[], control : Microsoft.Quantum.Arithmetic.LittleEndian, target : Qubit) : Unit'
 references: '- 量程逻辑电路的合成 Vivek Shende、Stephen Bullock、Igor Markov https://arxiv.org/abs/quant-ph/0406176'
 input:
   content: '(coefficients : Double[], control : Microsoft.Quantum.Arithmetic.LittleEndian, target : Qubit)'
   types:
   - name: coefficients
-    summary: 最多 $ 2 ^ n $ 系数 $ \theta_j $ 的数组。 $J $ th 用于索引以小字节序格式编码的数字状态 $ \ket{j} $。
+    summary: 最多 $ 2 ^ n $ 系数 $ \ theta_j $ 的数组。 $J $ th 用于索引以小字节序格式编码的数字状态 $ \ket{j} $。
     isArray: true
     isPrimitive: true
     uid: Double
@@ -26,7 +26,7 @@ input:
     summary: $n 以小字节序格式编码数字状态 $ \ket{j} $ 的 qubit 控制寄存器。
     uid: microsoft.quantum.arithmetic.littleendian
   - name: target
-    summary: 通过 $e ^ {i P \theta_j} $ 旋转的单个 qubit 寄存器。
+    summary: 通过 $e ^ {i P \ theta_j} $ 旋转的单个 qubit 寄存器。
     isPrimitive: true
     uid: Qubit
 output:
