--- a/api/qsharp/microsoft.quantum.intrinsic.measure.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.measure.yml
@@ -7,7 +7,7 @@ summary: >-
   对指定的 Pauli 中的一个或多个 qubits 执行联合度量。
 
 
-  以下分发提供了输出结果： \begin{align} \Pr （\texttt{Zero} | \ket{\psi}） = \frac12 \braket{\psi \mid | \left （\boldone + P_0 \otimes P_1 \otimes \cdots \otimes P_ {N-1} \right） \mid | \psi}，\end{align}，其中 $P _i $ 是 @no__ 的 $i $ th 元素t_0_，其中 $N = \texttt{Length} （\texttt{bases}） $。
+  此分发提供的输出结果为： \begin{align} \Pr （\texttt{Zero} | \ket{\psi}） = \frac12 \braket{\psi \mid | \left （\boldone + P_0 \otimes P_1 \otimes \cdots \otimes P_ {N-1} \right） \mid | \psi}，\end{align}，其中 $P _i $ 是 $i `bases`$ th 元素，其中 $N = \texttt{Length} （\texttt{bases}） $。
 
   也就是说，度量值返回一个 `Result` $d $，以使观察到的度量值的 eigenvalue 为 $ （-1） ^ d $。
 remarks: 如果基础数组和 qubit 数组的长度不同，则操作将失败。
