--- a/api/qsharp/microsoft.quantum.math.pnormalized.yml
+++ b/api/qsharp/microsoft.quantum.math.pnormalized.yml
@@ -7,7 +7,7 @@ summary: >-
   规范化 `L(p)` 标准中的 `Double`向量。
 
 
-  也就是说，假设数组的类型 $x $ `Double[]`，这将返回一个数组，其中所有元素都按 $p $-标准 $\|x\|_p $ 进行划分。
+  也就是说，假设数组的类型 $x $ `Double[]`，这将返回一个数组，其中所有元素均除以 $p $-标准 $\|x\|$。
 syntax: 'function PNormalized (p : Double, array : Double[]) : Double[]'
 input:
   content: '(p : Double, array : Double[])'
@@ -23,7 +23,7 @@ input:
 output:
   content: Double[]
   types:
-  - summary: 数组 $x 按 $p $-标准 $\|x\|_p $ 标准化的 $。
+  - summary: 由 $p $-标准 $\|x\|$x $ 标准化的数组 _p $。
     isArray: true
     isPrimitive: true
     uid: Double
