--- a/api/qsharp/microsoft.quantum.preparation.quantumrom.yml
+++ b/api/qsharp/microsoft.quantum.preparation.quantumrom.yml
@@ -7,11 +7,11 @@ summary: >-
   使用量程 ROM 技术来表示给定的密度矩阵。
 
 
-  给定一个 $N $ 系数 $ \alpha_j $ 的列表，这将返回一个单一的 $U $，该类型使用量程方法来准备 "密度" 矩阵 $ purification = \rho = 0} ^ {N-1} \sum_{j 的 \frac{的近似值 $ \tilde\rho\sum_{j = 0} ^ {p_j\ket {j} \ 寄存器 {j} $alpha_j |}{\sum_k | \alpha_k |}\ket{j}\bra{j} $。 在此近似中，错误 $ \epsilon $ 是： $ | p_j-\frac{| alpha_j |}{\sum_k | \alpha_k |} |\le \epsilon/N $ 和 $\|\tilde\rho-\rho\| \le \epsilon $。 换句话说，$ $ \begin{align} U\ket{0}^ {\lceil\log_2 N\rceil} \ 票证{0}^ {m} = \sum_{j = 0} ^ {N-1} \sqrt{p_j} \ket{j}\ket{\text{garbage}_j}。
+  给定一个 $N $ 系数 $ \ alpha_j $ 的列表，这将返回一个单一 $U $，该类型使用量程方法来准备近似值 x $ \rho = \ p_j {j = 0} ^ {N-1} \frac{的 purification 的近似值 $ \tilde\rho\ sum_ {j = 0} ^ {N-1} sum_ \ket{j}\bra{j} $alpha_j |}{\ sum_k | \ alpha_k |}\ket{j}\bra{j} $。 在此近似中，错误 $ \epsilon $ 是： $ | p_j-\frac{| alpha_j |}{\ sum_k | \ alpha_k |} |\le \epsilon/N $ 和 $\|\tilde\rho-\rho\| \le \epsilon $。 换句话说，$ $ \begin{align} U\ket{0}^ {\lceil\ log_2 N\rceil} \ 票证{0}^ {m} = \ sum_ {j = 0} ^ {N-1} \sqrt{p_j} \ket{j}\ket{\text{garbage} _j}。
 
   \end{align} $ $
 examples: >-
-  下面的代码段准备了 $ 3 $-qubit state $ \rho = \sum_{j = 0} ^{4}\frac{| alpha_j |} 的 purification{\sum_k | \alpha_k |}\ket{j}\bra{j} $，其中 $ \vec\alpha = （1.0，2.0，3.0，4.0，5.0） $，错误是 `1e-3`;
+  下面的代码段准备了 $ 3 $-qubit state $ \rho = \ sum_ {j = 0} ^{4}\frac{| alpha_j |} 的 purification{\ sum_k | \ alpha_k |}\ket{j}\bra{j} $，其中 $ \vec\alpha = （1.0，2.0，3.0，4.0，5.0） $，错误是 `1e-3`;
 
 
   ```qsharp
@@ -42,7 +42,7 @@ input:
     summary: >-
       $N $ 系数的数组，用于指定基础状态的概率。
 
-      负数 $-\alpha_j $ 将被视为正 $ | \alpha_j | $。
+      负数 $-\ alpha_j $ 将被视为正 $ | \ alpha_j | $。
     isArray: true
     isPrimitive: true
     uid: Double
@@ -59,7 +59,7 @@ output:
       ## <a name="second-parameter"></a>第二个参数
 
 
-      系数数组的单规范 $ \sum_j | \alpha_j | $。
+      系数数组的单规范 $ \ sum_j | \ alpha_j | $。
 
 
       ## <a name="third-parameter"></a>第三个参数
