--- a/api/qsharp/microsoft.quantum.preparation.statepreparationcomplexcoefficients.yml
+++ b/api/qsharp/microsoft.quantum.preparation.statepreparationcomplexcoefficients.yml
@@ -7,13 +7,13 @@ summary: >-
   返回准备特定量程状态的操作。
 
 
-  返回的操作 $U $ 准备具有复杂系数的任意量程状态 $ \ket{\psi} $，$r $n $-qubit 计算基础状态 $ \ket{0...0} $。
+  返回的操作 $U $ 准备带有复数系数的任意量程状态 $ \ket{\psi} $ $r 从 $n $-qubit 计算基础状态 $ \ket{0...0} $ _j e ^ {i t_j} $。
 
 
-  新分配的寄存器上的 U 操作由 $ $ \begin{align} U\ket {0 ... 0} = \ket{\psi} = \frac{\sum_{j = 0} ^ {2 ^ n-1} r_j e ^ {i t_j} \ket{j}}{\sqrt{\sum_{j = 0} ^ {2 ^ n-1} | r_j | ^ 2}} 提供。
+  新分配的寄存器上的 U 操作由 $ $ \begin{align} U\ket {0 ... 0} = \ket{\psi} = \frac{\ sum_ {j = 0} ^ {2 ^ n-1} r_j e ^ {i t_j} \ket{j}}{\sqrt{\ sum_ {j = 0} ^ {2 ^ n-1} | r_j | ^ 2}}。
 
   \end{align} $ $
-remarks: 负的输入系数 $r _j < $0 将被视为具有值 $ | r_j | $ 的正值。 如果指定的元素为 $ （r_j，t_j） = （0.0，0.0） $，则将填充 `coefficients`。
+remarks: 负的输入系数 $r 将被视为值为 $ | r_j | $ 的 _j < $0。 如果指定了小于 $ 2 ^ n $ 的元素 $ （r_j，t_j） = （0.0，0.0） $，则 `coefficients` 将填充。
 examples: >-
   以下代码片段在 qubit register `qubitsLE`中准备好量程状态 $ \ket{\psi} = e ^ {i 0.1} \ sqrt {1/8} \ 票证{0}+ \ sqrt {7/8} \ 票证{2}$。
 
