--- a/api/qsharp/microsoft.quantum.simulation.pauliblockencoding.yml
+++ b/api/qsharp/microsoft.quantum.simulation.pauliblockencoding.yml
@@ -7,8 +7,8 @@ summary: >-
   为 Hamiltonian 创建块编码单一编码。
 
 
-  Hamiltonian $H = \sum_{j}\alpha_j P_j $ 由 Pauli 术语 $P _j $，其中每个项都带有实系数 $ \alpha_j $ 描述。
-remarks: 这是通过以下方法获取的：准备并 unpreparing 状态 $ \ sum_ {j} \ sqrt {\ alpha_j/\ alpha} \ 票证 {j} $，并构造一个按乘法控制的单一 <xref:microsoft.quantum.preparation.statepreparationpositivecoefficients> 和 <xref:microsoft.quantum.canon.multiplexoperationsfromgenerator>。
+  Hamiltonian $H = \ sum_ {j} \ alpha_j P_j $ 由 $P $ _j $ 的 Pauli 术语的总和进行描述，每个术语都包含实系数 $ \ alpha_j $。
+remarks: 这是通过以下方法获取的：准备并 unpreparing 状态 $ \ sum_ {j} \sqrt{\ alpha_j/\alpha}\ket{j} $，并构造一个按乘法控制的单一 <xref:microsoft.quantum.preparation.statepreparationpositivecoefficients> 和 <xref:microsoft.quantum.canon.multiplexoperationsfromgenerator>。
 syntax: 'function PauliBlockEncoding (generatorSystem : Microsoft.Quantum.Simulation.GeneratorSystem) : (Double, Microsoft.Quantum.Simulation.BlockEncodingReflection)'
 input:
   content: '(generatorSystem : Microsoft.Quantum.Simulation.GeneratorSystem)'
@@ -23,7 +23,7 @@ output:
       ## <a name="first-parameter"></a>第一个参数
 
 
-      系数 $ \alpha = \sum_{j} | \alpha_j | $ 的一个标准。
+      系数 $ \alpha = \ sum_ {j} | \ alpha_j | $ 的一个标准。
 
 
       ## <a name="second-parameter"></a>第二个参数
